fix(search-result) scrolling visibility
changes scrolling visibility on mat-card-content

--- a/src/app/search/search-result/search-result.component.css
+++ b/src/app/search/search-result/search-result.component.css
@@ -22,7 +22,7 @@ i[hidden] {
 .mat-card-content {
   max-height: 100px;
   min-height: 25px;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .mat-card-actions {
